# flair-2

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
configs/: config.yaml  config_multimodal.yaml  config_multimodal_mid.yaml  config_sentinel_only.yaml  config_sentinel_tsvit.yaml  dataset_splitter_config.yaml  optimization.yaml  optimization_sentinel.yaml
configs/examples/: aerial_deeplabv3plus.yaml  aerial_segformer.yaml  aerial_unetformer.yaml  multimodal_late_fusion.yaml  optimization_aerial.yaml  optimization_sentinel.yaml  sentinel_tsvit.yaml  sentinel_utae.yaml
docs/: index.md
docs/api/: losses.md  model_builder.md  multimodal_fusion.md  multimodal_pipeline.md  pipeline.md  rs3mamba.md  samba_encoder.md  sentinel_pipeline.md  train.md  tsvit.md  tsvit_lookup.md  unetformer.md  utae_pp.md  validation.md  vssm_encoder.md
scripts/: benchmark_inference.py  compute_channel_stats.py  compute_class_weights.py  compute_sentinel_stats.py  run_train_eval.sh  test_multimodal_flow.py
src/data/: dataset_utils.py
src/data/pre_processing/: FlairDataset.py  __init__.py  chessmix.py  data_augmentation.py  flair_dataset.py  flair_multimodal_dataset.py  flair_sentinel_dataset.py  multimodal_augmentation.py  sentinel_augmentation.py  sentinel_utils.py
src/models/: common_blocks.py  losses.py  model_builder.py  multimodal_fusion.py  multimodal_mid_fusion.py  rs3mamba.py  samba_encoder.py  train.py  tsvit.py  tsvit_lookup.py  unetformer.py  utae_pp.py  utils.py  validation.py  vssm_encoder.py
src/models/architectures/: multimodal_fusion.py  rs3mamba.py  tsvit.py  unetformer.py
src/models/encoders/: vssm_encoder.py
src/pipeline/: multimodal_pipeline.py  optimization.py  pipeline.py  sentinel_optimization.py  sentinel_pipeline.py
src/utils/: logging_utils.py  mlflow_utils.py  model_stats.py  read_yaml.py  reproducibility.py
src/visualization/: mosaic.py  plot.py  utils.py
tests/: conftest.py  test_chessmix.py  test_data_augmentation.py  test_losses.py  test_model_builder.py  test_multimodal_collate.py  test_read_yaml.py  test_sentinel_augmentation.py  test_validation.py
