[project]
name = "flair-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "calflops>=0.3.2",
    "dagshub>=0.6.3",
    "einops>=0.8.1",
    "imagecodecs>=2025.8.2",
    "mlflow>=3.4.0",
    "optuna>=4.6.0",
    "optuna-integration>=4.6.0",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "tifffile>=2025.10.4",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "utae-paps @ git+https://github.com/rajteer/utae-paps.git@604be2cd94f211314df24e0bff9a4307704256fc",
]
authors = [
    {name = "Paweł Rajter"}
]
license = {text = "MIT"}

[project.scripts]
flair-train = "pipeline.pipeline:main"

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.13.3",
]

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true
show-fixes = true

include = ["src/**/*.py", "tests/**/*.py"]

exclude = [
    "venv",
    "build",
    "dist",
    ".venv",
    "__pycache__",
    "*.ipynb",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "EM101",   # raw-string-in-exception
    "ISC001",  # Conflicts with formatter ruff
    "PLR0913", # Too many arguments
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
